src/test/ui/issues/30000-39999/issue-32377.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/issue-32377.rs:15:14
   |
LL |     unsafe { mem::transmute(x) }
   |              ^^^^^^^^^^^^^^
   |
   = note: source type: `[usize; 2]` (N bits)
   = note: target type: `Bar<U>` (N bits)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
